src/test/ui/svh-change-type-static.stderr
error[E0460]: found possibly newer version of crate `a` which `b` depends on
  --> $DIR/svh-change-type-static.rs:20:1
   |
LL | extern crate b; //~ ERROR: found possibly newer version of crate `a` which `b` depends on
   | ^^^^^^^^^^^^^^^
   |
   = note: perhaps that crate needs to be recompiled?
   = note: the following crate versions were found:
           crate `a`: $PATH_a
           crate `b`: $PATH_b

error: aborting due to previous error

For more information about this error, try `rustc --explain E0460`.
